# MemScanner

./: .gitignore  CMakeLists.txt  README.md  ntdll64.cpp  ntdll64.h
include/: callbacks.hpp  datasource.hpp  dump.h  dump.hpp  file.hpp  log.hpp  memdatasource.hpp  memhelper.hpp  ntdll64.h  ntdll64.hpp  operations.hpp  pe.hpp  scanner.h  scanner.hpp  system_defs.h  system_defs.hpp  yara.hpp
rules/: pesig.yara  shellcode.yara  shellcode32.yara  shellcode64.yara
source/: callbacks.cpp  datasource.cpp  dump.cpp  file.cpp  log.cpp  main.cpp  memdatasource.cpp  memhelper.cpp  ntdll64.cpp  operations.cpp  pe.cpp  scanner.cpp  stdafx.h  test1.cpp  viewer.cpp  yara.cpp
tests/: aligned_reserve_test.cpp  composite_ds_test.cpp  datasource_test.cpp  doppelganging_test.cpp  exec_region_artifacts.cpp  external_vars_test.cpp  file.cpp  file.hpp  image_modification_test.cpp  memdatasource_test.cpp  multiple_allocations_test.cpp  peb_ldr_validation_test.cpp  pefile_test.cpp  peimage_test.cpp  private_pe.cpp  query_process_test.cpp  relocations_test.cpp  scanner_addr_test.cpp  scanner_current_process.cpp  scanner_opened_current_process.cpp  shellcode_module_overwrite.cpp  shellcode_test.cpp  simple_mt_test.cpp  single_page_test.cpp  susp_thread_test.cpp  yara_loadrules_test.cpp  yara_pe_test.cpp  yara_range_test.cpp  yara_reloadrules_test.cpp  yara_scan_pids.cpp
